# ai-transcriber

./: .editorconfig  .gitattributes  .gitignore  AiTranscriber.spec  CHANGELOG.md  CONTRIBUTING.md  LICENSE  MakeBuild.bat  README.md  app.py  pyproject.toml  requirements.txt
backend/: __init__.py  config.py  main.py  version.py
backend/routers/: __init__.py  models.py  system.py  transcription.py
docs/: ARCHITECTURE.md
frontend/: package-lock.json  package.json
frontend/src/app/: globals.css  layout.tsx  page.tsx
frontend/src/components/: ConfirmModal.tsx  DropZone.tsx  ErrorBoundary.tsx  FileQueue.tsx  ModelManager.tsx  SettingsPanel.tsx  SystemPanel.tsx  TranscriptionEditor.tsx
frontend/src/hooks/: useQueue.ts  useSettings.ts  useWebSocket.ts
scripts/: build.ps1  bump_version.py  make_ico.py
